import { newSpecPage } from '@stencil/core/testing';
import { StripeCurrencySelector } from '../stripe-currency-selector';
import type { IStripeService, ICurrencySelectorElementManager } from '../../../services/interfaces';
import * as factoryModule from '../../../services/factory';

// Mock loadStripe to avoid actual network calls
jest.mock('@stripe/stripe-js', () => ({
  loadStripe: jest.fn(() =>
    Promise.resolve({
      registerAppInfo: jest.fn(),
      elements: jest.fn(() => ({})),
    }),
  ),
}));

// Mock i18n
jest.mock('../../../utils/i18n', () => ({
  i18n: {
    t: (key: string) => key,
  },
}));

// Mock service implementations
let mockStripeService: jest.Mocked<IStripeService>;
let mockCurrencySelectorElementManager: jest.Mocked<ICurrencySelectorElementManager>;

describe('stripe-currency-selector', () => {
  // Set up mocks before each test
  beforeEach(() => {
    // Create fresh mock implementations
    mockStripeService = {
      state: {
        loadStripeStatus: '',
        applicationName: 'stripe-pwa-elements',
        publishableKey: undefined,
        stripeAccount: undefined,
        stripe: undefined,
        elements: undefined,
      },
      initialize: jest.fn().mockResolvedValue(undefined),
      onChange: jest.fn().mockReturnValue(jest.fn()),
      getStripe: jest.fn().mockReturnValue(undefined),
      getElements: jest.fn().mockReturnValue(undefined),
      reset: jest.fn(),
      dispose: jest.fn(),
    } as any;

    mockCurrencySelectorElementManager = {
      getState: jest.fn().mockReturnValue({
        errorMessage: '',
        selectedCurrency: undefined,
      }),
      initialize: jest.fn().mockResolvedValue({} as any),
      getElement: jest.fn().mockReturnValue(undefined),
      setError: jest.fn(),
      clearError: jest.fn(),
      unmount: jest.fn(),
    } as any;

    // Spy on factory methods to return our mocks
    jest.spyOn(factoryModule.serviceFactory, 'createStripeService').mockReturnValue(mockStripeService);
    jest.spyOn(factoryModule.serviceFactory, 'createCurrencySelectorElementManager').mockReturnValue(mockCurrencySelectorElementManager);
  });

  afterEach(() => {
    jest.restoreAllMocks();
  });

  describe('method test', () => {
    let element: StripeCurrencySelector = new StripeCurrencySelector();

    describe('#componentWillRender', () => {
      beforeEach(() => {
        element = new StripeCurrencySelector();

        // Mock element.el (host element) using defineProperty
        Object.defineProperty(element, 'el', {
          value: {
            querySelector: jest.fn(),
            classList: {
              add: jest.fn(),
            },
          },
          writable: true,
          configurable: true,
        });

        element.initStripe = jest.fn();
      });

      it.each([['' as const], ['failure' as const]])('If the publishableKey is not provided, should not call initStripe method(status: %s)', async loadingStatus => {
        mockStripeService.state.loadStripeStatus = loadingStatus;
        element.componentWillRender();
        expect(element.initStripe).toHaveBeenCalledTimes(0);
      });

      it.each([['' as const], ['failure' as const]])('Should call initStripe method when the status is not a part of "success" or "loading" (status: %s)', async loadingStatus => {
        mockStripeService.state.publishableKey = 'pk_test_xxxx';
        mockStripeService.state.loadStripeStatus = loadingStatus;
        element.componentWillRender();
        expect(element.initStripe).toHaveBeenCalledWith('pk_test_xxxx', {
          stripeAccount: undefined,
        });
      });

      it.each([['success' as const], ['loading' as const]])(
        'Should not call initStripe method when the status is a part of "success" or "loading" (status: %s)',
        async loadingStatus => {
          mockStripeService.state.publishableKey = 'pk_test_xxxx';
          mockStripeService.state.loadStripeStatus = loadingStatus;
          element.componentWillRender();
          expect(element.initStripe).toHaveBeenCalledTimes(0);
        },
      );
    });

    describe('#setErrorMessage', () => {
      beforeEach(() => {
        element = new StripeCurrencySelector();

        // Mock element.el (host element) using defineProperty
        Object.defineProperty(element, 'el', {
          value: {
            querySelector: jest.fn(),
            classList: {
              add: jest.fn(),
            },
          },
          writable: true,
          configurable: true,
        });
      });

      it('should set the certain error message', async () => {
        const message = 'Error message is here';

        await element.setErrorMessage(message);
        expect(mockCurrencySelectorElementManager.setError).toHaveBeenCalledWith(message);
      });
    });

    describe('#initStripe', () => {
      beforeEach(() => {
        element = new StripeCurrencySelector();

        // Mock currency selector element with 'on' method
        const mockCurrencySelectorElement = {
          on: jest.fn(),
          mount: jest.fn(),
          unmount: jest.fn(),
        };

        // Mock element.el (host element) using defineProperty
        const mockElement = {
          addEventListener: jest.fn(),
          removeEventListener: jest.fn(),
        };
        Object.defineProperty(element, 'el', {
          value: {
            querySelector: jest.fn().mockReturnValue(mockElement),
            classList: {
              add: jest.fn(),
            },
          },
          writable: true,
          configurable: true,
        });

        // Mock successful initialization
        mockStripeService.state.loadStripeStatus = 'success';
        mockStripeService.initialize.mockResolvedValue(undefined);
        mockCurrencySelectorElementManager.initialize.mockResolvedValue(mockCurrencySelectorElement as any);
      });

      it('should call stripeService.initialize with correct parameters', async () => {
        await element.initStripe('pk_test_xxx');

        expect(mockStripeService.initialize).toHaveBeenCalledWith('pk_test_xxx', {
          stripeAccount: undefined,
          applicationName: 'stripe-pwa-elements',
        });
      });

      it('should call stripeService.initialize with account id', async () => {
        await element.initStripe('pk_test_xxx', {
          stripeAccount: 'acct_xxx',
        });

        expect(mockStripeService.initialize).toHaveBeenCalledWith('pk_test_xxx', {
          stripeAccount: 'acct_xxx',
          applicationName: 'stripe-pwa-elements',
        });
      });
    });

    describe('#updateStripeAccountId', () => {
      beforeEach(() => {
        element = new StripeCurrencySelector();

        // Mock element.el (host element) using defineProperty
        Object.defineProperty(element, 'el', {
          value: {
            querySelector: jest.fn(),
            classList: {
              add: jest.fn(),
            },
          },
          writable: true,
          configurable: true,
        });

        element.initStripe = jest.fn();
      });

      it('Should not call initStripe when publishableKey is not set', async () => {
        mockStripeService.state.publishableKey = undefined;
        await element.updateStripeAccountId('acct_xxx');
        expect(element.initStripe).toHaveBeenCalledTimes(0);
      });

      it('When call this, should call the #initStripe method only one time', async () => {
        mockStripeService.state.publishableKey = 'pk_test_xxxx';
        await element.updateStripeAccountId('acct_xxx');
        expect(element.initStripe).toHaveBeenCalledTimes(1);
      });

      it('When call this, should call the #initStripe method with expected props', async () => {
        mockStripeService.state.publishableKey = 'pk_test_xxxx';
        await element.updateStripeAccountId('acct_xxx');
        expect(element.initStripe).toHaveBeenCalledWith('pk_test_xxxx', {
          stripeAccount: 'acct_xxx',
        });
      });

      it('Should fallback to publishableKey prop when service state is not initialized', async () => {
        mockStripeService.state.publishableKey = undefined;
        element.publishableKey = 'pk_prop_value';

        await element.updateStripeAccountId('acct_xxx');
        expect(element.initStripe).toHaveBeenCalledWith('pk_prop_value', {
          stripeAccount: 'acct_xxx',
        });
      });
    });

    describe('#updatePublishableKey', () => {
      beforeEach(() => {
        element = new StripeCurrencySelector();

        // Mock element.el (host element) using defineProperty
        Object.defineProperty(element, 'el', {
          value: {
            querySelector: jest.fn(),
            classList: {
              add: jest.fn(),
            },
          },
          writable: true,
          configurable: true,
        });

        element.initStripe = jest.fn();
      });

      it('When call this, should call the #initStripe method only one time', async () => {
        await element.updatePublishableKey('pk_test_xxx');
        expect(element.initStripe).toHaveBeenCalledTimes(1);
      });

      it('When call this, should call the #initStripe method with expected props', async () => {
        await element.updatePublishableKey('pk_test_xxx');
        expect(element.initStripe).toHaveBeenCalledWith('pk_test_xxx', {
          stripeAccount: undefined,
        });
      });

      it('When call this, should call the #initStripe method with expected props (with options)', async () => {
        element.stripeAccount = 'acct_xxx';
        await element.updatePublishableKey('pk_test_xxx');
        expect(element.initStripe).toHaveBeenCalledWith('pk_test_xxx', {
          stripeAccount: 'acct_xxx',
        });
      });
    });

    describe('#getSelectedCurrency', () => {
      beforeEach(() => {
        element = new StripeCurrencySelector();

        // Mock element.el (host element) using defineProperty
        Object.defineProperty(element, 'el', {
          value: {
            querySelector: jest.fn(),
            classList: {
              add: jest.fn(),
            },
          },
          writable: true,
          configurable: true,
        });
      });

      it('should return undefined when no currency is selected', async () => {
        const currency = await element.getSelectedCurrency();

        expect(currency).toBeUndefined();
      });

      it('should return selected currency from state', async () => {
        mockCurrencySelectorElementManager.getState.mockReturnValue({
          errorMessage: '',
          selectedCurrency: 'EUR',
        });

        const currency = await element.getSelectedCurrency();

        expect(currency).toBe('EUR');
      });
    });
  });

  describe('rendering test', () => {
    it('with the api key', async () => {
      const page = await newSpecPage({
        components: [StripeCurrencySelector],
        html: `<stripe-currency-selector publishable-key='pk_test_xxx'></stripe-currency-selector>`,
      });

      expect(page.root).toMatchSnapshot();
    });

    it('with client secret', async () => {
      const page = await newSpecPage({
        components: [StripeCurrencySelector],
        html: `<stripe-currency-selector publishable-key='pk_test_xxx' client-secret='cs_test_xxx'></stripe-currency-selector>`,
      });

      expect(page.root).toMatchSnapshot();
    });

    it('should load stripe after setting the publishable-key', async () => {
      const page = await newSpecPage({
        components: [StripeCurrencySelector],
        html: `<stripe-currency-selector></stripe-currency-selector>`,
      });

      // Without publishable-key, the element should still render
      expect(page.root).toBeTruthy();
      page.root.setAttribute('publishable-key', 'yyyy');
      await page.waitForChanges();
      expect(page.root).toBeTruthy();
    });

    it('should load stripe after setting the publishable-key (snapshot)', async () => {
      const page = await newSpecPage({
        components: [StripeCurrencySelector],
        html: `<stripe-currency-selector></stripe-currency-selector>`,
      });

      page.root.setAttribute('publishable-key', 'yyyy');
      await page.waitForChanges();

      expect(page.root).toMatchSnapshot();
    });
  });
});
